@@ -209,6 +209,14 @@ struct _mosquitto_auth_plugin{
 	int (*psk_key_get)(void *user_data, const char *hint, const char *identity, char *key, int max_key_len);
 };
 
+struct _clientid_index_hash{
+	/* this is the key */
+	char *id;
+	/* this is the index where the client ID exists in the db->contexts array */
+	int db_context_index;
+	UT_hash_handle hh;
+};
+
 struct mosquitto_db{
 	dbid_t last_db_id;
 	struct _mosquitto_subhier subs;
@@ -217,6 +225,7 @@ struct mosquitto_db{
 	struct _mosquitto_acl *acl_patterns;
 	struct _mosquitto_unpwd *psk_id;
 	struct mosquitto **contexts;
+	struct _clientid_index_hash *clientid_index_hash;
 	int context_count;
 	struct mosquitto_msg_store *msg_store;
 	int msg_store_count;
